<resources>
    <string name="app_name">RoomMapper</string>
    <string name="connects_down">Connects Down</string>
    <string name="connects_left">Connects Left</string>
    <string name="connects_right">Connects Right</string>
    <string name="connects_up">Connects Up</string>
    <string name="corridor_number">Corridor Number</string>
    <string name="room_number">Room Number</string>
    <string name="submit">Submit</string>
</resources>
