<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bigrepo.roommapper.MainActivity">

    <EditText
        android:id="@+id/editTextCorridor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/corridor_number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomConnectionRadioId"
        app:layout_constraintVertical_bias="0.098" />

    <EditText
        android:id="@+id/editTextRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/room_number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/PictureRadioGroupId"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintVertical_bias="0.463" />

    <RadioGroup
        android:id="@+id/roomConnectionRadioId"
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRoom"
        app:layout_constraintVertical_bias="0.053"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/radioButtonDown"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/connects_down" />

        <RadioButton
            android:id="@+id/radioButtonUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/connects_up"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-57dp" />

        <RadioButton
            android:id="@+id/radioButtonLeft"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/connects_left"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="373dp" />

        <RadioButton
            android:id="@+id/radioButtonRight"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/connects_right" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/undoButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.254" />

    <com.example.bigrepo.roommapper.TouchImageView
        android:id="@+id/imageView"
        android:layout_width="784dp"
        android:layout_height="574dp"
        app:srcCompat="@drawable/gmit0"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/editTextLog"
        android:layout_width="329dp"
        android:layout_height="278dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="1dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:focusable="false"
        android:textAlignment="viewStart"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintLeft_toRightOf="@+id/editTextCorridor"
        app:layout_constraintRight_toRightOf="parent"
        tools:focusableInTouchMode="false"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/PictureRadioGroupId"
        app:layout_constraintVertical_bias="0.123" />

    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="47dp"
        android:text="Undo"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintLeft_toRightOf="@+id/editTextRoom"
        app:layout_constraintRight_toLeftOf="@+id/editTextLog"
        app:layout_constraintTop_toBottomOf="@+id/PictureRadioGroupId"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup
        android:id="@+id/PictureRadioGroupId"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_goneMarginBottom="13dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/radioButtonGmap0Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="GMap 0" />

        <RadioButton
            android:id="@+id/radioButtonGmap1Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="GMap 1" />

        <RadioButton
            android:id="@+id/radioButtonDgmapId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Dmap -1" />

        <RadioButton
            android:id="@+id/radioButtonDmap0Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Dmap 0" />

        <RadioButton
            android:id="@+id/radioButtonDmap1Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Dmap 1" />

        <RadioButton
            android:id="@+id/radioButtonDmap2Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Dmap 2" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
